--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -37,7 +37,7 @@
         <span id="log3_5" style="color: #C7DC6800;">Done</span>
 
     </div>
-    <div class="logcon">
+    <div id="enjoy" class="logcon" style="color: #38A1DB00;">
         -------------------
         Enjoy your journey!
         -------------------
@@ -51,7 +51,7 @@
         </button>
     </div>
     <div class="btn" style="margin-top: 40px;">
-        <button id="cwinfo" class="cwinfo">
+        <button id="cwinfo" class="cwinfo" onclick="cwinfoClick()">
             What is Conway
         </button>
     </div>
