--- a/pages/game/index.html
+++ b/pages/game/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./game.css">
     <title>Enjoy your game</title>
 </head>
 
@@ -13,5 +14,12 @@
 
     </canvas>
 </body>
+<script src="./game.js" type="text/javascript"></script>
+<script src="../../js/lifegame/coordinate.js" type="text/javascript"></script>
+<script src="../../js/lifegame/entity.js" type="modutext/javascriptle"></script>
+<script src="../../js/lifegame/patternlibs.js" type="text/javascript"></script>
+<script src="../../js/contradict/player.js" type="text/javascript"></script>
+<script src="../../js/container/doublegrid.js" type="text/javascript"></script>
+<script src="../../js/container/loopgrid.js" type="text/javascript"></script>
 
 </html>
