--- a/pages/cwinfo/index.html
+++ b/pages/cwinfo/index.html
@@ -24,7 +24,7 @@
                 * If there are 2 or 3, it still remains here.<br />
             </div>
             <div style="padding-top: 40px; margin-left: -5px; text-align: center;">
-                <button class="try-it-btn">
+                <button class="try-it-btn" onclick="tryItYourself()">
                     Try it yourself!
                 </button>
             </div>
