--- a/pages/game/index.html
+++ b/pages/game/index.html
@@ -14,12 +14,12 @@
 
     </canvas>
 </body>
-<script src="./game.js" type="text/javascript"></script>
-<script src="../../js/lifegame/coordinate.js" type="text/javascript"></script>
-<script src="../../js/lifegame/entity.js" type="modutext/javascriptle"></script>
-<script src="../../js/lifegame/patternlibs.js" type="text/javascript"></script>
-<script src="../../js/contradict/player.js" type="text/javascript"></script>
-<script src="../../js/container/doublegrid.js" type="text/javascript"></script>
-<script src="../../js/container/loopgrid.js" type="text/javascript"></script>
+<script src="./game.js"></script>
+<script src="./coordinate.js"></script>
+<script src="./entity.js"></script>
+<script src="./patternlibs.js"></script>
+<script src="./player.js"></script>
+<script src="./doublegrid.js"></script>
+<script src="./loopgrid.js"></script>
 
 </html>
