--- a/pages/game/index.html
+++ b/pages/game/index.html
@@ -14,12 +14,14 @@
 
     </canvas>
 </body>
+
+<script>glo = {};</script>
 <script src="./game.js"></script>
-<script src="./coordinate.js"></script>
-<script src="./entity.js"></script>
-<script src="./patternlibs.js"></script>
-<script src="./player.js"></script>
-<script src="./doublegrid.js"></script>
-<script src="./loopgrid.js"></script>
+<script src="js/lifegame/coordinate.js"></script>
+<script src="js/lifegame/entity.js"></script>
+<script src="js/lifegame/patternlibs.js"></script>
+<script src="js/contradict/player.js"></script>
+<script src="js/container/doublegrid.js"></script>
+<script src="js/container/loopgrid.js"></script>
 
 </html>
