--- a/pages/game/index.html
+++ b/pages/game/index.html
@@ -15,13 +15,6 @@
     </canvas>
 </body>
 
-<script>glo = {};</script>
-<script src="./game.js"></script>
-<script src="js/lifegame/coordinate.js"></script>
-<script src="js/lifegame/entity.js"></script>
-<script src="js/lifegame/patternlibs.js"></script>
-<script src="js/contradict/player.js"></script>
-<script src="js/container/doublegrid.js"></script>
-<script src="js/container/loopgrid.js"></script>
+<script src="./grand.js"></script>
 
 </html>
