--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
     <title>Flight Battle - Conway Version</title>
+
+    <script src="./index.js" type="text/javascript"></script>
+    <script src="./js/event/event.js" type="text/javascript"></script>
+    <script src="./js/container/loopgrid.js" type="text/javascript"></script>
+    <script src="./js/container/doublegrid.js" type="text/javascript"></script>
+    <script src="./js/event/event.js" type="text/javascript"></script>
+    <script src="./js/event/eventbus.js" type="text/javascript"></script>
 </head>
 
 <body class="index-bkimg">
@@ -56,8 +63,6 @@
         </button>
     </div>
 
-
-    <script src="./index.js" type="text/javascript"></script>
 </body>
 
 
