--- a/index.html
+++ b/index.html
@@ -7,12 +7,25 @@
     <link rel="stylesheet" href="./index.css">
     <title>Flight Battle - Conway Version</title>
 
+    <script src="./js/con_way.js" type="text/javascript"></script>
+
+    <script src="//code.jquery.com/jquery-3.6.0.js"></script>
+
     <script src="./index.js" type="text/javascript"></script>
-    <script src="./js/event/event.js" type="text/javascript"></script>
-    <script src="./js/container/loopgrid.js" type="text/javascript"></script>
-    <script src="./js/container/doublegrid.js" type="text/javascript"></script>
+
+    <script src="./js/gamecycle/properties.js" type="text/javascript"></script>
+
     <script src="./js/event/event.js" type="text/javascript"></script>
     <script src="./js/event/eventbus.js" type="text/javascript"></script>
+
+    <script src="./js/entity/entity.js" type="text/javascript"></script>
+    <script src="./js/entity/visibleEntity.js" type="text/javascript"></script>
+    <script src="./js/entity/golSpace.js" type="text/javascript"></script>
+
+    <script src="./js/container/loopgrid.js" type="text/javascript"></script>
+    <script src="./js/container/doublegrid.js" type="text/javascript"></script>
+
+    <script src="./js/lifegame/patternLib.js" type="text/javascript"></script>
 </head>
 
 <body class="index-bkimg">
