small fix, usage of JQuery

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./index.css">
     <title>Flight Battle - Conway Version</title>
 
-    <script src="//code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
     <script src="./index.js" type="text/javascript"></script>
 
