--- a/pages/cwinfo/cwinfo.html
+++ b/pages/cwinfo/cwinfo.html
@@ -34,6 +34,9 @@
         <div id="w2-title" class="w-title"></div>
     </div>
 </body>
+
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+
 <script src="./cwinfo.js" type="text/javascript"></script>
 
 </html>
