--- a/pages/game/game.html
+++ b/pages/game/game.html
@@ -10,7 +10,7 @@
 
     <script src="../../js/con_way.js" type="text/javascript"></script>
 
-    <script src="//code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
     <script src="../../js/gamecycle/properties.js" type="text/javascript"></script>
 
