Generator of Foes

--- a/pages/game/game.html
+++ b/pages/game/game.html
@@ -26,6 +26,8 @@
 
     <script src="../../js/lifegame/patternLib.js" type="text/javascript"></script>
 
+    <script src="../../js/gamecycle/foegen.js" type="text/javascript"></script>
+
     <script src="./game.js" type="text/javascript"></script>
 </head>
 
