--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
-    <script src="./index.js" type="text/javascript"></script>
+    <script src="./index.ts" type="text/typescript"></script>
 
 </head>
 
