--- a/pages/game/game.html
+++ b/pages/game/game.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="./game.css">
     <title>Enjoy your game</title>
 
+
+
+    <script src="https://requirejs.org/docs/release/2.3.6/comments/require.js"></script>
+
+
+
     <script src="../../js/con_way.js" type="text/javascript"></script>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
