--- a/pages/game/game.html
+++ b/pages/game/game.html
@@ -10,15 +10,14 @@
 
 
 
-    <script src="https://requirejs.org/docs/release/2.3.6/comments/require.js"></script>
+    <script src="https://requirejs.org/docs/release/2.3.6/comments/require.js" defer async="true"
+        data-main="./game.js"></script>
 
 
-
-    <script src="../../js/con_way.js" type="text/javascript"></script>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
-    <script src="../../js/gamecycle/properties.js" type="text/javascript"></script>
+    <!-- <script src="../../js/gamecycle/properties.js" type="text/javascript"></script>
 
     <script src="../../js/event/event.js" type="text/javascript"></script>
     <script src="../../js/event/eventbus.js" type="text/javascript"></script>
@@ -32,9 +31,12 @@
 
     <script src="../../js/lifegame/patternLib.js" type="text/javascript"></script>
 
-    <script src="../../js/gamecycle/foegen.js" type="text/javascript"></script>
+    <script src="../../js/gamecycle/foegen.js" type="text/javascript"></script> -->
 
-    <script src="./game.js" type="text/javascript"></script>
+    <script>require.config({
+            baseUrl: "../../js"
+        })</script>
+
 </head>
 
 <body>
