--- a/pages/game/game.html
+++ b/pages/game/game.html
@@ -33,9 +33,11 @@
 
     <script src="../../js/gamecycle/foegen.js" type="text/javascript"></script> -->
 
-    <script>require.config({
+    <script>
+        require.config({
             baseUrl: "../../js"
-        })</script>
+        })
+    </script>
 
 </head>
 
