--- a/pages/game/game.html
+++ b/pages/game/game.html
@@ -13,9 +13,9 @@
     <script src="https://requirejs.org/docs/release/2.3.6/comments/require.js" defer async="true"
         data-main="./game.js"></script>
 
-
-
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+
+
 
     <!-- <script src="../../js/gamecycle/properties.js" type="text/javascript"></script>
 
@@ -33,11 +33,11 @@
 
     <script src="../../js/gamecycle/foegen.js" type="text/javascript"></script> -->
 
-    <script>
+    <!-- <script>
         require.config({
-            baseUrl: "../../js"
+            baseUrl: "../../js",
         })
-    </script>
+    </script> -->
 
 </head>
 
