--- a/pages/game/game.html
+++ b/pages/game/game.html
@@ -8,11 +8,6 @@
     <link rel="stylesheet" href="./game.css">
     <title>Enjoy your game</title>
 
-
-
-    <script src="https://requirejs.org/docs/release/2.3.6/comments/require.js" defer async="true"
-        data-main="./game.js"></script>
-
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
 
@@ -42,9 +37,13 @@
 </head>
 
 <body>
-    <canvas id="cwf" class="cwf" style="width: 100%; height: 100%; box-sizing: content-box;">
+    <canvas id="cwf" height="" width="">
 
     </canvas>
+
 </body>
+
+<script src="https://requirejs.org/docs/release/2.3.6/comments/require.js" defer async="true"
+    data-main="./game.js"></script>
 
 </html>
