--- a/pages/game/game.html
+++ b/pages/game/game.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="Cache-Control" content="no-store">
+    <meta http-equiv="expires" content="0">
     <link rel="stylesheet" href="./game.css">
     <title>Enjoy your game</title>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
+    <script src="https://requirejs.org/docs/release/2.3.6/comments/require.js" defer async="true"
+        data-main="./game.js"></script>
 
 
     <!-- <script src="../../js/gamecycle/properties.js" type="text/javascript"></script>
@@ -43,7 +48,5 @@
 
 </body>
 
-<script src="https://requirejs.org/docs/release/2.3.6/comments/require.js" defer async="true"
-    data-main="./game.js"></script>
 
 </html>
