--- a/pages/game/game.html
+++ b/pages/game/game.html
@@ -43,7 +43,7 @@
 
 <body>
     <canvas id="cwf" height="" width="">
-
+        Sorry, your brower does not support HTML canvas. There is no game. (T _ T)
     </canvas>
 
 </body>
