--- a/pages/game/game.html
+++ b/pages/game/game.html
@@ -41,7 +41,7 @@
 
 </head>
 
-<body>
+<body onkeydown="" onkeyup="">
     <canvas id="cwf" height="" width="">
         Sorry, your brower does not support HTML canvas. There is no game. (T _ T)
     </canvas>
