--- a/pages/game/game.html
+++ b/pages/game/game.html
@@ -22,6 +22,9 @@
     <canvas id="cwf" height="" width="">
         Sorry, your brower does not support HTML canvas. There is no game. (T _ T)
     </canvas>
+    <svg>
+
+    </svg>
 
 </body>
 
