--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <span id="game-status" class="l1hide">Disabled</span>
     </div>
     <div class="logcon">
-        <span id="log1" style="color:#EBF6F700"> Loading file: lifegame.html...&nbsp; </span>
+        <span id="log1" style="color:#EBF6F700"> Loading file: pattern_lib.json&nbsp; </span>
         <span id="log1_5" style="color: #C7DC6800;">Done</span>
     </div>
     <div class="logcon">
-        <span id="log2" style="color:#EBF6F700"> Loading file: lifegame.css...&nbsp; </span>
+        <span id="log2" style="color:#EBF6F700"> Loading file: stage_lib.json...&nbsp; </span>
         <span id="log2_5" style="color: #C7DC6800;">Done</span>
 
     </div>
@@ -54,7 +54,7 @@
     <div class="title middle" style="margin-top: 20px;">Con-Way</div>
     <div class="subtitle middle" style="margin-top: 5px;"> Conway Game of Life </div>
     <div class="btn" style="margin-top: 80px;">
-        <button id="stabtn" class="stabtn" onclick="stabtnClick()">
+        <button id="stabtn" class="stabtn" onclick="stabtnClick()" disabled="true">
             &gt; GAME START &lt;
         </button>
     </div>
