--- a/pages/game/game.html
+++ b/pages/game/game.html
@@ -45,6 +45,6 @@
     </svg>
 
 </body>
-<script src="https://requirejs.org/docs/release/2.3.6/comments/require.js" data-main="./game.js"></script>
+<script src="https://requirejs.org/docs/release/2.3.6/comments/require.js" data-main="./launch.js"></script>
 
 </html>
